[package]
name = "aws-smithy-http-client-reqwest"
version = "0.1.0"
edition = "2024"
authors = ["bzp2010"]
description = "Reqwest-backed HTTP client for Smithy runtimes and the AWS SDK for Rust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bzp2010/aws-smithy-http-client-reqwest"
keywords = ["aws", "smithy", "reqwest", "http", "sdk"]
categories = ["api-bindings", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["time"] }
http-body-util = { version = "0", default-features = false }
reqwest = { version = "0", default-features = false, features = ["charset", "http2", "system-proxy", "stream"] }
aws-smithy-types = { version = "1", default-features = false }
aws-smithy-runtime-api = { version = "1", default-features = false, features = [
  "http-1x",
] }
aws-config = { version = "1", default-features = false }
